# istanbul-game

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  RULES.md  actions.py  constants.py  game.py  player.py  pyproject.toml  runner.py  serialize.py  tiles.py  turn.py
.github/workflows/: ci.yml
analysis/: extraction.py
dev/: example_game.py
entry_points/: extraction_stub.py  replay_from_csvs.py
examples/red_wins_3p/: expected_output.json  moves.csv  setup.csv
istanbul_game/: action_json.py  actions.py  constants.py  game.py  player.py  runner.py  serialize.py  tiles.py  turn.py
istanbul_game/analysis/: extraction.py
istanbul_game/dev/: example_game.py  full_game.py
istanbul_game/entry_points/: extraction_stub.py  json_io.py  replay_from_csvs.py
istanbul_game/lib/: utils.py
istanbul_game/load/: actions.py  core.py  csv_json.py  from_csv.py  location_transformer.py  phases.py  setup.py
lib/: utils.py
load/: actions.py  core.py  from_csv.py  location_transformer.py  phases.py  setup.py
tests/: __init__.py  conftest.py  helpers.py  test_action_json.py  test_constants.py  test_game.py  test_game_actions.py  test_integration.py  test_lib_utils.py  test_tiles.py  test_turn.py
