[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "istanbul-game"
version = "0.1.0"
description = "Implementation of rules of Istanbul board game"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "nverhaaren"}
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
    "ruff>=0.4.0",
]

[tool.setuptools]
packages = ["istanbul_game", "istanbul_game.load", "istanbul_game.lib", "istanbul_game.analysis", "istanbul_game.entry_points", "istanbul_game.dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["istanbul_game"]
omit = [
    "*/tests/*",
    "*/dev/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
# Disabled: Allow functions without type annotations
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = "istanbul_game.dev.*"
ignore_errors = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]
ignore = [
    "RUF018",  # assignment expressions in assert - established pattern in codebase
    "SIM108",  # ternary operator - if/else blocks are often more readable
]

[tool.ruff.lint.per-file-ignores]
"istanbul_game/dev/*" = ["F401", "F841"]

[tool.ruff.lint.isort]
known-first-party = ["istanbul_game"]
